# ComfyUI-Distilled-ResShift

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  resshift_infer.py
_vendor/resshift/configs/: realsr_swinunet_inference.yaml  realsr_swinunet_x2_inference.yaml
_vendor/resshift/ldm/models/: autoencoder.py
_vendor/resshift/ldm/modules/: attention.py
_vendor/resshift/ldm/modules/diffusionmodules/: model.py  util.py
_vendor/resshift/models/: gaussian_diffusion.py  swin_transformer.py
_vendor/resshift/utils/: util_common.py
