[project]
name = "comfyui-distilled-resshift"
description = "Distilled 1-step ResShift super-resolution (×4 or ×2) as a pixel-space IMAGE -> IMAGE node. A ResShift student (distilled from a 15-step teacher, paper 22490) upsamples any RGB image ×4 or ×2 in one stochastic step (scale dropdown). Self-contained vendored ResShift net (no xformers needed on any GPU); student + vq-f4 VQGAN auto-download on first use."
version = "0.2.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/sorryhyun/ComfyUI-Distilled-ResShift"
# Distilled student weights (auto-downloaded per scale):
Weights = "https://huggingface.co/sorryhyun/Distilled-ResShift-4x"
Weights-x2 = "https://huggingface.co/sorryhyun/Distilled-ResShift-2x"
# Upstream ResShift network (vendored under _vendor/resshift/, S-Lab license):
Source = "https://github.com/zsyOAOA/ResShift"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Distilled ResShift SR (×4/×2, 1-step)"
Icon = ""
